Fixed color of logout btn on mobile nav

--- a/fireflight/src/styles/_mobile.scss
+++ b/fireflight/src/styles/_mobile.scss
@@ -51,7 +51,7 @@
                 z-index: 2;
                 
                 a {
-                    color: $accentColor;
+                    color: $lilia;
                     display: block;
                 }
             }
